--- a/jest-101/package.json
+++ b/jest-101/package.json
@@ -2,5 +2,11 @@
   "name": "jest-101",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^27.4.7"
+  },
+  "scripts": {
+    "test": "jest"
+  }
 }
