--- a/jest-101/package.json
+++ b/jest-101/package.json
@@ -4,7 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^27.4.7"
+    "@babel/preset-env": "^7.16.11",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^27.4.6",
+    "jest": "^27.4.7",
+    "regenerator-runtime": "^0.13.9"
   },
   "scripts": {
     "test": "jest"
