--- a/jest-101/package.json
+++ b/jest-101/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
-    "babel-core": "^6.26.3",
     "babel-jest": "^27.4.6",
     "jest": "^27.4.7",
     "regenerator-runtime": "^0.13.9"
