--- a/bookish-react/package.json
+++ b/bookish-react/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "cypress": "^9.6.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "json-server": "^0.17.0"
+    "json-server": "^0.17.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
