--- a/bookish-react/package.json
+++ b/bookish-react/package.json
@@ -14,6 +14,7 @@
     "lodash.isempty": "^4.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.20.0",
     "cypress": "^9.6.0",
     "eslint-plugin-cypress": "^2.12.1",
     "json-server": "^0.17.0",
